--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>A history of browsers</title>
+  <link href="style.css" type="text/css">
 </head>
 <body>
 <h1>A history of browsers</h1>
